--- a/app/src/main/res/layout/layout_dialog_title.xml
+++ b/app/src/main/res/layout/layout_dialog_title.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="@dimen/dp_0"
 
         android:gravity="center"
-        android:text="@string/str_hello_world"
+        android:text="@string/hello_world"
         />
 
     <View
