--- a/app/src/main/res/layout/activity_sms_backup_activity.xml
+++ b/app/src/main/res/layout/activity_sms_backup_activity.xml
@@ -27,7 +27,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/bnt_selection"
             android:layout_toLeftOf="@+id/bnt_selection"
+            android:layout_toEndOf="@+id/bnt_back"
             android:layout_toRightOf="@+id/bnt_back"
             android:text="@string/sms_backup_small_cap"/>
 
@@ -36,7 +38,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_gravity="right"
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="end"
             android:background="@drawable/ic_button_selector"
             android:contentDescription="@string/back"
             android:paddingLeft="@dimen/dp_10"
@@ -75,7 +78,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:onClick="onClickedBackup"
             android:padding="@dimen/dp_10"
             android:text="@string/backup"
             android:textAllCaps="true"
