sms backup section is in progress.

--- a/app/src/main/res/layout/dialog_message.xml
+++ b/app/src/main/res/layout/dialog_message.xml
@@ -9,7 +9,7 @@
     <include layout="@layout/layout_dialog_title"/>
 
     <TextView
-        android:id="@+id/txt_message"
+        android:id="@+id/txt_recent_message"
         style="@style/dialog_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
