--- a/app/src/main/res/layout/activity_sms_backup.xml
+++ b/app/src/main/res/layout/activity_sms_backup.xml
@@ -27,18 +27,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toStartOf="@+id/bnt_selection"
-            android:layout_toLeftOf="@+id/bnt_selection"
             android:layout_toEndOf="@+id/bnt_back"
+            android:layout_toLeftOf="@+id/bnt_select"
             android:layout_toRightOf="@+id/bnt_back"
-            android:text="@string/sms_backup_small_cap"/>
+            android:layout_toStartOf="@+id/bnt_select"
+            android:text="@string/sms_backup_small_cap"
+            android:textStyle="bold"/>
 
         <ImageButton
-            android:id="@+id/bnt_selection"
+            android:id="@+id/bnt_select"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_gravity="end"
             android:background="@drawable/ic_button_selector"
             android:contentDescription="@string/back"
@@ -49,7 +50,7 @@
     </RelativeLayout>
 
     <ListView
-        android:id="@+id/list_sms"
+        android:id="@+id/list_sms_conversation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/backup_bnt_bottom"
