sms backup section is in progress.

--- a/app/src/main/res/layout/activity_sms_backup.xml
+++ b/app/src/main/res/layout/activity_sms_backup.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -49,12 +50,22 @@
 
     </RelativeLayout>
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/top_toolbar_layout"
+        android:layout_marginBottom="@dimen/dp_8"
+        android:layout_marginTop="@dimen/dp_8"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="@string/home_banner_ad_unit_id"/>
+
     <ListView
         android:id="@+id/list_sms_conversation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/backup_bnt_bottom"
-        android:layout_below="@+id/top_toolbar_layout"
+        android:layout_below="@+id/adView"
         android:layout_marginLeft="@dimen/dp_8"
         android:layout_marginRight="@dimen/dp_8"/>
 
