--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,5 +19,6 @@
     <dimen name="dp_50">50dp</dimen>
     <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_4">4dp</dimen>
+    <dimen name="sp_16">16sp</dimen>
 
 </resources>
