--- a/app/src/main/res/layout/activity_sms_backup.xml
+++ b/app/src/main/res/layout/activity_sms_backup.xml
@@ -24,6 +24,7 @@
             android:src="@drawable/ic_back_activity"/>
 
         <TextView
+            android:id="@+id/txt_title"
             style="@style/textTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,8 +33,7 @@
             android:layout_toLeftOf="@+id/bnt_select"
             android:layout_toRightOf="@+id/bnt_back"
             android:layout_toStartOf="@+id/bnt_select"
-            android:text="@string/sms_backup_small_cap"
-            android:textStyle="bold"/>
+            android:text="@string/sms_backup_small_cap" />
 
         <ImageButton
             android:id="@+id/bnt_select"
@@ -85,7 +85,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/bnt_backup"
+            android:id="@+id/txt_backup"
             style="@style/textButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
