sms backup section is in progress.

--- a/app/src/main/res/layout/dialog_create_file_name.xml
+++ b/app/src/main/res/layout/dialog_create_file_name.xml
@@ -14,7 +14,7 @@
         android:layout_margin="@dimen/dp_8"
         android:background="@drawable/ic_edit_text_bg"
         android:padding="@dimen/dp_10"
-        android:text="@string/_1234"
+        android:hint="@string/file_name"
         android:textColor="@color/black_text"
         android:textSize="@dimen/sp_16"
         />
