--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -11,7 +11,7 @@
         android:layout_height="124dp"
         android:layout_centerInParent="true"
         android:contentDescription="@string/app_icon"
-        android:src="@drawable/ic_launcher"/>
+        android:src="@drawable/app_icon_big"/>
 
     <TextView
         android:id="@+id/txt_company_name"
