--- a/app/src/main/res/layout/dialog_create_backup_file.xml
+++ b/app/src/main/res/layout/dialog_create_backup_file.xml
@@ -13,9 +13,25 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_8"
         android:background="@drawable/ic_edit_text_bg"
-        android:padding="@dimen/dp_10"
+        android:enabled="false"
         android:hint="@string/file_name"
+        android:padding="@dimen/dp_10"
         android:textColor="@color/black_text"
+        android:textColorHint="@color/transparent_black"
+        android:textSize="@dimen/sp_16"
+        />
+
+    <EditText
+        android:id="@+id/edit_file_note"
+        style="@style/textBodyStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_8"
+        android:background="@drawable/ic_edit_text_bg"
+        android:hint="@string/backup_note"
+        android:padding="@dimen/dp_10"
+        android:textColor="@color/black_text"
+        android:textColorHint="@color/transparent_black"
         android:textSize="@dimen/sp_16"
         />
 
