--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,5 +20,6 @@
     <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_4">4dp</dimen>
     <dimen name="sp_16">16sp</dimen>
+    <dimen name="sp_18">18sp</dimen>
 
 </resources>
